Version 0.3:
	Python type arrays can use Sage rendering in Sage
	Sage support without mixins
	renamed some modules (no API changes)

Version 0.2:
	Fix: tensordot returns scalar instead of 0-d hilbert array
	Fix: catch usage of array slices (which are not allowed)

Version 0.1:
	Initial version