@@ -11,12 +11,10 @@ features
 * matrix pow
 * trace
 * eigenvalues
-* unary negation
 
 fixes
 
 * make sure pickle is done right
-* cannot set slice data e.g. m[0:3] = [1,2,3]
 * use singletons for HilbertAtom and HilbertBaseField (and make pickle restore the singletons)
 * np.product returns float for empty list, and this is used extensively for computing dimensions
 * array creation in Sage needs to cast input data to type specified by sage_ring
