@@ -2,6 +2,8 @@ Version 0.3:
 	Python type arrays can use Sage rendering in Sage
 	Sage support without mixins
 	renamed some modules (no API changes)
+	unary negation
+	Pauli states and some circuit operators
 
 Version 0.2:
 	Fix: tensordot returns scalar instead of 0-d hilbert array
